refactor(payroll): Implement PayrollResultDetailCalculationMapper and enhance payroll result processing
- Added PayrollResultDetailCalculationMapper to handle conversion of payroll results to detailed entries.
- Updated PayrollResultRepository to include a new query for fetching employee codes based on payroll result codes.
- Introduced PayrollResultEmployeeCodeProjection for better data handling in repository queries.
- Enhanced EmployeeSalaryService with a method to retrieve active employee salary by code and date.
- Refactored EmployeeSalaryServiceImpl to streamline salary calculation and improve logging.
- Updated PayrollResultService to include mapping of payroll results by employee code.
- Refactored PayrollRunServiceImpl to improve rerun payroll logic and integrate new calculation mapper.
- Added unit tests for new functionalities and ensured existing tests are updated accordingly.